--- a/settings/internal/com.kms.katalon.execution.webui.properties
+++ b/settings/internal/com.kms.katalon.execution.webui.properties
@@ -1,2 +1,4 @@
-#Mon Dec 23 15:30:48 CET 2019
+#Mon Jan 06 08:47:55 CET 2020
 execution.default.selectingCapturedObjectSelectorMethod="XPATH"
+execution.default.selectingCapturedObjectProperties="id,true;name,true;alt,true;checked,true;form,true;href,true;placeholder,true;selected,true;src,true;title,true;type,true;text,true;linked_text,true"
+execution.default.selectingCapturedObjectXpaths="xpath\:attributes,true;xpath\:idRelative,true;dom\:name,true;xpath\:link,true;xpath\:neighbor,true;xpath\:href,true;xpath\:img,true;xpath\:position,true"
