--- a/settings/internal/com.kms.katalon.execution.webui.properties
+++ b/settings/internal/com.kms.katalon.execution.webui.properties
@@ -1,4 +1,9 @@
-#Mon Jan 06 08:47:55 CET 2020
-execution.default.selectingCapturedObjectSelectorMethod="XPATH"
-execution.default.selectingCapturedObjectProperties="id,true;name,true;alt,true;checked,true;form,true;href,true;placeholder,true;selected,true;src,true;title,true;type,true;text,true;linked_text,true"
+#Thu Jan 09 17:03:00 CET 2020
+execution.default.selectingCapturedObjectSelectorMethod="BASIC"
+execution.default.selectingCapturedObjectProperties="id,true;name,false;alt,false;checked,false;form,false;href,false;placeholder,false;selected,false;src,false;title,false;type,false;text,false;linked_text,false"
 execution.default.selectingCapturedObjectXpaths="xpath\:attributes,true;xpath\:idRelative,true;dom\:name,true;xpath\:link,true;xpath\:neighbor,true;xpath\:href,true;xpath\:img,true;xpath\:position,true"
+execution.default.webUi.enablePageLoadTimeout=false
+execution.default.webUi.pageLoadTimeout=30
+execution.default.webUi.ignorePageLoadTimeOutException=false
+execution.default.webUi.actionDelay=0
+execution.default.waitForIEHanging=600
